--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Лучшие кавер-группы Москвы</title>
     <link rel="stylesheet" href="./css/style.css">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> -->
     <meta
@@ -97,6 +97,39 @@
               </div>
           </div>
       </section>
+      <section class="nabis">
+        <div class="section-nabis">
+            <div class="nabis-info">
+                <div class="nabis-title">
+                    <h2>NABIS BAND</h2>
+                </div>
+                <div class="nabis-about">
+                    <p><strong>О группе:</strong> Кавер-группа NABIS это талантливые и супер харизматичные артисты. 
+                    Участники телевизионных проектов и шоу : Песни на ТНТ 2 сезон, Голос 7, Новая волна-2019, Laima Voice-2020, Муз ТВ и многие другие.
+                      Нам доверяют лучшие event-агентства Столицы                            
+                      Более 6 лет радуем наших гостей
+                      Работаем по всему миру</p>
+                </div>
+                <div class="nabis-structure">
+                    <p><strong>Состав группы:</strong> 4 человека</p>
+                </div>
+                <div class="nabis-repertoire">
+                    <p><strong>Репертуар:</strong> Русские и иностранные хиты</p>
+                </div>
+                <p><strong>Стоимость: </strong> от 100 тыс.рублей</p>
+                <p><strong>Сайт: </strong><a href="http://www.nabisband.ru">nabisband.ru</a></p>
+                <p><strong>Телефон: </strong> +7(925)-203-53-73</p>
+                <ul><strong> Дополнительные плюсы:</strong>
+                    <li>• Своё звуковое и световое оборудование </li>
+                    <li>• Выступления по всей России и за рубежом. </li>
+                    <li>• Возможность оплаты по безналу </li>
+                </ul>
+            </div>
+            <div class="nabis-image">
+                <img src="./img/nabis/nabis_01.jpeg" alt="">
+            </div>
+          </div>
+  </section>
       <section class="bodyDance">
       <div class="section-bodyDance">
           <div class="bodyDance-info">
@@ -131,39 +164,6 @@
           </div>
       </div>
       </section>
-      <section class="nabis">
-            <div class="section-nabis">
-                <div class="nabis-info">
-                    <div class="nabis-title">
-                        <h2>NABIS BAND</h2>
-                    </div>
-                    <div class="nabis-about">
-                        <p><strong>О группе:</strong> Кавер-группа NABIS это талантливые и супер харизматичные артисты. 
-                        Участники телевизионных проектов и шоу : Песни на ТНТ 2 сезон, Голос 7, Новая волна-2019, Laima Voice-2020, Муз ТВ и многие другие.
-                          Нам доверяют лучшие event-агентства Столицы                            
-                          Более 6 лет радуем наших гостей
-                          Работаем по всему миру</p>
-                    </div>
-                    <div class="nabis-structure">
-                        <p><strong>Состав группы:</strong> 4 человека</p>
-                    </div>
-                    <div class="nabis-repertoire">
-                        <p><strong>Репертуар:</strong> Русские и иностранные хиты</p>
-                    </div>
-                    <p><strong>Стоимость: </strong> от 100 тыс.рублей</p>
-                    <p><strong>Сайт: </strong><a href="http://www.nabisband.ru">nabisband.ru</a></p>
-                    <p><strong>Телефон: </strong> +7(925)-203-53-73</p>
-                    <ul><strong> Дополнительные плюсы:</strong>
-                        <li>• Своё звуковое и световое оборудование </li>
-                        <li>• Выступления по всей России и за рубежом. </li>
-                        <li>• Возможность оплаты по безналу </li>
-                    </ul>
-                </div>
-                <div class="nabis-image">
-                    <img src="./img/nabis/nabis_01.jpeg" alt="">
-                </div>
-              </div>
-      </section>
       <section class="theClaps">
         <div class="section-theClaps">
             <div class="theClaps-info">
@@ -195,8 +195,6 @@
             </div>
           </div>
     </section>
-
-
     <footer class="footer-group">
         <!-- <div class="footer-title">
             <h1>Лучшие кавер-группы Москвы</h1>
