--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="section-bigHit">
               <div class="bigHit-info">
                 <div class="bigHit-title">
-                  <h2>Big hit</h2>
+                  <h2>BIG HIT</h2>
               </div>
               <div class="bigHit-about">
                   <p><strong>О группе:</strong> Та самая кавер-группа!</p>
